# web_utility_scripts

./: pyproject.toml
resources/data/jsons/: 1.json  2.json
web_utility_scripts/: script.py
